# skynet

./: .gitattributes  .gitignore  AGENTS.md  AIRGAP.html  AIRGAP.md  AUTH_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.flower  Dockerfile.worker  Justfile  PERF_AUDIT.md  README.md  codedb.snapshot  dashboard_html.py  dead-code-report.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.stable.txt  requirements.txt  tooltip-audit-report.md
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_claim_columns.py  0003_storage_hardening.py  0004_user_quota_overrides.py  0005_user_quota_audit_events.py  342f7449be26_baseline.py  a1b2c3d4e5f6_add_is_private_to_job_embeddings.py  a4b5c6d7e8f9_drop_projection_columns.py  a7b8c9d0e1f2_add_agent_message_training_metadata.py  a8b9c0d1e2f3_add_user_storage_quota_overrides.py  b2c3d4e5f6a7_datetime_columns_to_timestamptz.py  b4c5d6e7f8a9_normalize_legacy_metric_scale.py  b5c6d7e8f9a0_add_search_query_log.py  b8c9d0e1f2a3_add_api_tokens.py  b9c0d1e2f3a4_add_gepa_checkpoints.py  c1d2e3f4a5b6_add_jobs_accumulated_runtime_seconds.py  c3d4e5f6a7b8_add_agent_conversations.py  c6d7e8f9a0b1_single_owner_grants_to_editor.py  c9d0e1f2a3b4_add_optimization_share_links.py  d0e1f2a3b4c5_add_share_general_access_and_grants.py  d4e5f6a7b8c9_add_job_attempts_and_code_version.py  d5e6f7a8b9c0_add_dataset_library.py  d7e8f9a0b1c2_add_users_table.py  e1f2a3b4c5d6_add_share_link_general_role.py  e5f6a7b8c9d0_add_job_notified_at_and_idempotency.py  e6f7a8b9c0d1_add_dataset_share_tables.py  f1a2b3c4d5e6_add_job_logs_optimization_timestamp_index.py  f2b3c4d5e6f7_add_share_grants_grantee_index.py  f3c4d5e6f7a8_backfill_stale_embedding_task_names.py  f6a7b8c9d0e1_drop_job_templates.py  f7a8b9c0d1e2_add_jobs_stored_bytes.py
backend/core/: __init__.py  config.py  constants.py  exceptions.py  i18n.py  i18n_en.py  i18n_keys.py  job_quota_overrides.py  models.py  validators.py
backend/core/api/: __init__.py  app.py  auth.py  converters.py  dataset_access.py  directory_client.py  errors.py  mcp_mount.py  model_catalog.py  observability.py  passwords.py  response_limits.py  sharing_access.py
backend/core/api/routers/: __init__.py  _helpers.py  _probe.py  accounts.py  admin.py  agent_history.py  analytics.py  api_tokens.py  code_agent.py  code_validation.py  constants.py  dashboard.py  dataset_library.py  dataset_share.py  datasets.py  generalist_agent.py  models.py  optimizations.py  optimizations_meta.py  recommendations.py  registry.py  serve.py  share.py  submissions.py  templates.py  usage.py  wizard.py
backend/core/api/tests/: __init__.py  conftest.py  mocks.py  test_accounts.py  test_admin_router.py  test_admin_storage_router.py  test_agent_history_router.py  test_api_tokens.py  test_app_exception_handlers.py  test_app_integration.py  test_auth.py  test_code_validation_router.py  test_converters.py  test_dashboard_router.py  test_dataset_library_router.py  test_dataset_links.py  test_dataset_share_router.py  test_datasets_router.py  test_generalist_persistence.py  test_grant_access.py  test_mcp_mount.py  test_meta_and_analytics_routes.py  test_model_catalog.py  test_models_router.py  test_observability.py  test_observability_metrics.py  test_optimization_restart.py  test_optimization_resume.py  test_optimizations_router.py  test_program_export.py  test_quota.py  test_router_helpers.py  test_serve_router.py  test_share_router.py  test_submissions_router.py  (+3 more)
backend/core/dataset/: __init__.py  planner.py  profiler.py
backend/core/i18n_locales/: __init__.py  he.json
backend/core/models/: __init__.py  analytics.py  artifacts.py  common.py  constants.py  dataset.py  infra.py  optimizations.py  results.py  serve.py  submissions.py  telemetry.py  templates.py  validation.py
backend/core/notifications/: __init__.py  _wordmark.py  comms.py  notifier.py
backend/core/registry/: core.py  resolvers.py
backend/core/service_gateway/: __init__.py  artifacts.py  code_agent.py  core.py  dashboard.py  data.py  embeddings.py  generalist_agent.py  language_models.py  optimizers.py  progress.py  react_compat.py  recommendations.py  safe_exec.py  summarizer.py  timing.py  validators.py
backend/core/storage/: __init__.py  base.py  checkpoint_store.py  dataset_library.py  local.py  models.py  remote.py  schema_lock.py  usage.py
backend/core/tests/: test_config.py  test_constants.py  test_exceptions.py
backend/core/worker/: __init__.py  constants.py  engine.py  log_handler.py  subprocess_runner.py
backend/docs/: analytics-endpoints.md
backend/load_tests/: __init__.py  docker-compose.loadtest.yml  lb.conf  run_all.py
backend/load_tests/lib/: __init__.py  auth.py  db.py  metrics.py  payloads.py  reporter.py  runner.py  warmup.py
backend/load_tests/mock_lm/: Dockerfile  server.py
backend/load_tests/scenarios/: __init__.py  dashboard_read.py  failure_injection.py  full_lifecycle.py  submission_burst.py
backend/scripts/: agent_driver.py  demo_react_optimization.py  e2e_recommendations.py  run_react_optimization.py  setup_postgres.py
backend/tests/: __init__.py  conftest.py  locustfile.py  mocks.py  test_i18n_catalog_boundary.py  test_llm_integration.py  test_load.py  test_main_importable.py
backend/tests/fixtures/: __init__.py
backend/tests/unit/: __init__.py  conftest.py  test_config.py  test_constants.py  test_directory_client.py  test_exceptions.py  test_helpers.py  test_i18n_catalog_boundary.py  test_main_importable.py  test_models.py  test_quota.py  test_routers.py  test_trajectory.py  test_validators.py
backend/usage_guide/: 01_quickstart.ipynb  02_grid_search.ipynb  03_creative_tasks.ipynb  04_advanced.ipynb  05_gepa_showcase.ipynb  README.md  gsm8k_gepa_optimization.ipynb  hotpotqa_gepa_optimization.ipynb  index.html  pyproject.toml  skynet_client.py
usage_guide/: README.md  gsm8k_gepa_optimization.ipynb  hotpotqa_gepa_optimization.ipynb  pyproject.toml
usage_guide/data/: gsm8k.json  hotpotqa.json
(+761 files in other folders)
