# TODO: On-premise - Configure pip to use local artifactory by creating pip.conf or using --index-url
# Example pip.conf:
#   [global]
#   index-url = https://artifactory.your-company.com/api/pypi/pypi-remote/simple
#   trusted-host = artifactory.your-company.com

[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
"core.api" = ["static/scalar/*.js", "static/scalar/fonts/*.woff2"]

[project]
name = "skynet"
version = "0.1.0"
description = "Skynet - FastAPI service wrapper for DSPy optimization workflows"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "dspy>=2.5",
    "litellm>=1.40",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scalar-fastapi>=1.8",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
# Unit tests (backend/tests/unit/) run without Postgres, OPENAI_API_KEY,
# or a live server. Integration tests (test_llm_integration.py, test_load.py)
# require all three. Run each tier separately:
#
#   uv run pytest tests/unit/ -v          # fast CI gate, no credentials
#   uv run pytest tests/test_llm_integration.py -v  # nightly paid tier
#
testpaths = ["tests"]
asyncio_mode = "auto"
