[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.setuptools.package-data]
"core.api" = [
    "static/scalar/*.js",
    "static/scalar/*.svg",
    "static/scalar/fonts/*.woff2",
]
"core.i18n_locales" = ["*.json"]

[project]
name = "skynet"
version = "0.1.0"
description = "Skynet - FastAPI service wrapper for DSPy optimization workflows"
authors = [{ name = "Skynet maintainers" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.23",
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    "dspy~=3.0",
    "litellm>=1.40",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scalar-fastapi>=1.8",
    "scipy>=1.15.3",
    "fastmcp>=3.0",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.25",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.11",
]
load = [
    "locust>=2.0",
]
recommendations = [
    "sentence-transformers>=2.5",
    "numpy>=1.24",
    "umap-learn>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 120
# Notebook cells get rewritten by Jupyter and have non-standard import order
# from kernel context; skip them. ``skynet_client.py`` is regular Python and
# stays in scope.
extend-exclude = ["usage_guide/*.ipynb"]

[tool.ruff.lint]
# Lean modern set: PEP 8 errors/style + naming + import order + pyupgrade,
# bugbear, simplify, ruff-specific, comprehensions, return, args, tidy
# imports, try/except hygiene, performance, pytest, pathlib, misc cleanups,
# async correctness, exception messages, import conventions, logging
# format, implicit-str-concat, pylint errors+warnings, refurb.
select = [
    "E", "F", "I", "UP", "B", "SIM", "RUF",
    "N", "C4", "RET", "ARG", "TID", "TRY", "PERF",
    "PT", "PTH", "PIE", "ASYNC", "EM", "ICN", "G",
    "ISC", "PLE", "PLW", "FURB",
]
ignore = [
    "E501",     # line length — handled by ruff format
    "TRY003",   # long messages outside exception class — too noisy with our DomainError pattern
    "TRY300",   # 'try-consider-else' — over-eager, hurts readability
    "EM101",    # raw string in exception — fine for short literal messages
    "EM102",    # f-string in exception — fine for short interpolations
    "G004",     # f-string in logging — we accept the perf cost for legibility
    "PERF203",  # try/except in loops — sometimes the right thing
    "PLW2901",  # loop variable overwritten by assignment — common idiom
    "PLW0603",  # global statement — module-level singletons (caches, embedder, fork service) are intentional
    "ARG001",   # unused function arg — too noisy on FastAPI dependency-injection sigs
    "ARG002",   # unused method arg — too noisy on protocol implementations
    "ARG003",   # unused class-method arg — too noisy on classmethod factories
    "ARG004",   # unused static-method arg
    "ARG005",   # unused lambda arg
    "RET504",   # unnecessary assignment before return — clarity wins
    "TRY301",   # raise within try — sometimes intentional
    "RUF001",   # ambiguous unicode in string — em-dash and × are intentional typography
    "RUF002",   # ambiguous unicode in docstring — em-dash and × are intentional typography
    "RUF003",   # ambiguous unicode in comment — em-dash and × are intentional typography
    "RUF012",   # mutable class default — Pydantic Field handles this; tests overrideable
    "PT011",    # pytest.raises too broad — sometimes that's the point
    "ISC001",   # conflicts with ruff format
    "TID252",   # parent-relative imports — the subpackage layout is built on these
]

[tool.ruff.lint.isort]
known-first-party = ["core", "skynet_client"]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally violate some rules for clarity:
#   RUF012  mutable defaults in test fixtures
#   PLR2004 magic-number comparisons (asserting on literal values)
#   N802    function names like ``test_X_does_Y``
#   ARG     fixtures often accept and ignore parameters
#   PT012   multiple statements in raises block
#   S101    assert usage
#   TID252  relative imports inside tests
"tests/*" = ["RUF012", "ARG", "S101", "PLR2004", "PT012", "TID252"]
"core/**/tests/*" = ["RUF012", "ARG", "S101", "PLR2004", "PT012", "TID252"]

[tool.ruff.lint.pep8-naming]
# Pydantic and SQLAlchemy validators / mixins use PascalCase classmethods
# (validator, field_validator, validates) — don't flag.
# ``model_validator`` is mode-dependent (``mode="before"`` is classmethod,
# ``mode="after"`` is instance method); we use ``mode="after"`` exclusively,
# so it stays out of this list and N804 keeps catching real misuse.
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.field_validator",
    "sqlalchemy.orm.validates",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = ["usage_guide/", ".venv/"]

[tool.pytest.ini_options]
# Unit tests live next to the code they cover under ``core/<subpkg>/tests/``
# and run without Postgres, OPENAI_API_KEY, or a live server. Integration
# tests (test_llm_integration.py, test_load.py) live under ``tests/`` and
# require all three. Run each tier separately:
#
#   pytest core/ -v                          # fast CI gate, no credentials
#   pytest tests/test_llm_integration.py -v  # nightly paid tier
#   pytest tests/ -m "not slow" -v           # skip long-running LLM tests
#
testpaths = ["core", "tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = ["--strict-markers"]
markers = [
    "e2e: full end-to-end tests requiring a live LLM (slow, costs API credits)",
    "slow: tests that take > 30 s to complete",
    "load: concurrency / latency stress tests",
]
