# TODO: On-premise - Configure pip to use local artifactory by creating pip.conf or using --index-url
# Example pip.conf:
#   [global]
#   index-url = https://artifactory.your-company.com/api/pypi/pypi-remote/simple
#   trusted-host = artifactory.your-company.com

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skynet-usage-guide"
version = "0.1.0"
description = "Dependencies for the Skynet usage notebooks"
authors = [{ name = "Skynet Maintainers" }]
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.1",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "requests>=2.31",
    "jupyter>=1.0",
]
