# On-prem / air-gap install: point pip at your Artifactory mirror via pip.conf,
# environment, or uv index. Pick the one your runtime uses:
#
#   1) ~/.pip/pip.conf (or %APPDATA%\pip\pip.ini on Windows):
#        [global]
#        index-url = https://artifactory.your-company.com/api/pypi/pypi-remote/simple
#        trusted-host = artifactory.your-company.com
#
#   2) Per-shell:
#        export PIP_INDEX_URL=https://artifactory.your-company.com/api/pypi/pypi-remote/simple
#        export PIP_TRUSTED_HOST=artifactory.your-company.com
#
#   3) Uncomment the [[tool.uv.index]] block below if you install with `uv pip`.

# [[tool.uv.index]]
# name = "artifactory"
# url = "https://artifactory.your-company.com/api/pypi/pypi-remote/simple"
# default = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skynet-usage-guide"
version = "0.1.0"
description = "Dependencies for the Skynet usage notebooks"
authors = [{ name = "Skynet Maintainers" }]
requires-python = ">=3.10"
dependencies = [
    "dspy>=3.1",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "requests>=2.31",
    "jupyter>=1.0",
]
